MDEV-18333 Slow_queries count doesn't increase when slow_query_log is turned off